// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db query Get aircrafts tests getAllAircraft returns all active aircraft in the db 1`] = `
[
  {
    "cautions": null,
    "createdAt": Any<String>,
    "createdBy": 0,
    "displayName": "Diamond DA40",
    "equipment": "SDFGY/S",
    "hourlyRateEur": "216.00",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "engineTBOCycle": 1800,
      "lastAnnualDate": "2024-10-15",
      "lastEngineOverhaulTach": 4500,
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "100",
      "lastPropOverhaulTach": 4000,
      "maintenanceCycle": 100,
      "nextAnnualDate": "2025-10-15",
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100",
      "propTBOCycle": 2400,
      "totalPercentHours": 10,
      "usablePercentHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    "registration": "OH-STL",
    "updatedAt": Any<String>,
    "updatedBy": 0,
    "warnings": null,
    "yearOfManufacture": 2007,
  },
  {
    "cautions": null,
    "createdAt": Any<String>,
    "createdBy": 0,
    "displayName": "Diamond DV20",
    "equipment": "VOY/S",
    "hourlyRateEur": "147.00",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "engineTBOCycle": 2000,
      "lastAnnualDate": "2024-06-20",
      "lastEngineOverhaulTach": 5001,
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "50",
      "lastPropOverhaulTach": 5100,
      "maintenanceCycle": 50,
      "nextAnnualDate": "2025-06-20",
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50",
      "propTBOCycle": 2000,
      "totalPercentHours": 5,
      "usablePercentHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
    "registration": "OH-IHQ",
    "updatedAt": Any<String>,
    "updatedBy": 0,
    "warnings": null,
    "yearOfManufacture": 2010,
  },
]
`;

exports[`Db query Get aircrafts tests getAllAircraft returns all aircraft in the db 1`] = `
[
  {
    "cautions": null,
    "createdAt": Any<String>,
    "createdBy": 0,
    "displayName": "Diamond DA40",
    "equipment": "SDFGY/S",
    "hourlyRateEur": "216.00",
    "location": "EFNU BF-hangar 21",
    "maintenance": {
      "engineTBOCycle": 1800,
      "lastAnnualDate": "2024-10-15",
      "lastEngineOverhaulTach": 4500,
      "lastMaintenanceDate": "2024-11-10",
      "lastMaintenanceTach": 4709,
      "lastMaintenanceType": "100",
      "lastPropOverhaulTach": 4000,
      "maintenanceCycle": 100,
      "nextAnnualDate": "2025-10-15",
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 4778,
      "nextMaintenanceType": "100",
      "propTBOCycle": 2400,
      "totalPercentHours": 10,
      "usablePercentHours": 8,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DA40",
    "notes": "Keep oil quantity level in the middle of the approved range - do not add to full!",
    "registration": "OH-STL",
    "updatedAt": Any<String>,
    "updatedBy": 0,
    "warnings": null,
    "yearOfManufacture": 2007,
  },
  {
    "cautions": null,
    "createdAt": Any<String>,
    "createdBy": 0,
    "displayName": "Diamond DV20",
    "equipment": "VOY/S",
    "hourlyRateEur": "147.00",
    "location": "EFNU Cumulus Hangar",
    "maintenance": {
      "engineTBOCycle": 2000,
      "lastAnnualDate": "2024-06-20",
      "lastEngineOverhaulTach": 5001,
      "lastMaintenanceDate": "2025-03-01",
      "lastMaintenanceTach": 6085,
      "lastMaintenanceType": "50",
      "lastPropOverhaulTach": 5100,
      "maintenanceCycle": 50,
      "nextAnnualDate": "2025-06-20",
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 6130,
      "nextMaintenanceType": "50",
      "propTBOCycle": 2000,
      "totalPercentHours": 5,
      "usablePercentHours": 3,
    },
    "manufacturer": "Diamond Aircraft",
    "model": "DV20",
    "notes": "Koneen palosammutin on huollossa. Ei ole pakollinen varuste, mutta huomioitava!",
    "registration": "OH-IHQ",
    "updatedAt": Any<String>,
    "updatedBy": 0,
    "warnings": null,
    "yearOfManufacture": 2010,
  },
  {
    "cautions": null,
    "createdAt": Any<String>,
    "createdBy": 0,
    "displayName": "Piper PA-28",
    "equipment": "SFD",
    "hourlyRateEur": "228.00",
    "location": "EFNU",
    "maintenance": {
      "engineTBOCycle": 2000,
      "lastAnnualDate": "2024-03-10",
      "lastEngineOverhaulTach": 5000,
      "lastMaintenanceDate": "2024-04-15",
      "lastMaintenanceTach": 5180,
      "lastMaintenanceType": "50",
      "lastPropOverhaulTach": 5100,
      "maintenanceCycle": 50,
      "nextAnnualDate": "2025-03-10",
      "nextMaintenanceDate": null,
      "nextMaintenanceTach": 5230,
      "nextMaintenanceType": "50",
      "propTBOCycle": 2400,
      "totalPercentHours": 5,
      "usablePercentHours": 3,
    },
    "manufacturer": "Piper Aircraft",
    "model": "PA-28",
    "notes": "Waiting for annual",
    "registration": "OH-P28",
    "updatedAt": Any<String>,
    "updatedBy": 0,
    "warnings": null,
    "yearOfManufacture": 2005,
  },
]
`;

exports[`Db query Get aircrafts tests getAllAircraftByRegistration returns the active aircraft in the db 1`] = `
{
  "cautions": null,
  "createdAt": Any<String>,
  "createdBy": 0,
  "displayName": "Diamond DA40",
  "equipment": "SDFGY/S",
  "hourlyRateEur": "216.00",
  "location": "EFNU BF-hangar 21",
  "maintenance": {
    "engineTBOCycle": 1800,
    "lastAnnualDate": "2024-10-15",
    "lastEngineOverhaulTach": 4500,
    "lastMaintenanceDate": "2024-11-10",
    "lastMaintenanceTach": 4709,
    "lastMaintenanceType": "100",
    "lastPropOverhaulTach": 4000,
    "maintenanceCycle": 100,
    "nextAnnualDate": "2025-10-15",
    "nextMaintenanceDate": null,
    "nextMaintenanceTach": 4778,
    "nextMaintenanceType": "100",
    "propTBOCycle": 2400,
    "totalPercentHours": 10,
    "usablePercentHours": 8,
  },
  "manufacturer": "Diamond Aircraft",
  "model": "DA40",
  "notes": "Keep oil quantity level in the middle of the approved range - do not add to full!",
  "registration": "OH-STL",
  "updatedAt": Any<String>,
  "updatedBy": 0,
  "warnings": null,
  "yearOfManufacture": 2007,
}
`;
